--- a/game/2048.html
+++ b/game/2048.html
@@ -342,7 +342,7 @@
     text-decoration: none;
 }
   .tag:hover {
-       background-color: #7f3300;
+    background-color: #ff7a21;
     padding: 0.7rem;
 }
             
