--- a/game/2048.html
+++ b/game/2048.html
@@ -6,33 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>2048 Unblocked: Play Online for Free | FAF Games</title>
-        <meta name="description" content="
-       
-            
-        <meta name="title" content="Fruit Merge, Fruit Merge Unblocked">
-        <meta name="keywords" content="Candy Jump Game, Farm Heroes Saga, Fruit Merge, Candy Crush Saga, 2048, 2048 Unblocked,
-        puzzle games examples
-        puzzle game for kids
-        puzzle definition
-        jigsaw puzzle 
-        puzzle games for adults
-        puzzle games wikipedia
-        puzzle games online
-        jigsaw puzzle games 
-        best puzzle games ">
-        <meta name="news_keywords" content="cool math games
-        candy jump world record
-        candy jump cool math games
-        candy jump unblocked
-        color jump
-        candy jump unblocked 66
-        candy jump world record 2022
-        coolmath
-        color jump switch">
-       <meta name="author" content="FAF Games Team">
+        <meta name="description" content="2048 Unblocked is a fun and addictive puzzle game where you slide numbered tiles to combine them and reach 2048. Play online free anytime, no download or install required.">   
+        <meta name="title" content="2048 Game, 2048 Unblocked">
+        <meta name="keywords" content="2048 Game, 2048, 2048 Unblocked, 2048 games examples, puzzle game for kids, puzzle definition, 2048 puzzle, puzzle games for adults, puzzle games Wikipedia, puzzle games online, 2048 puzzle games, best puzzle games ">
+        <meta name="news_keywords" content="cool math games, 2048 world record, 2048 cool math games, 2048 unblocked, 2048, 2048 unblocked 66, 2048 world record 2025, 2048 game">
+        <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/2048.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
