--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -6,13 +6,13 @@
               <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
               <meta name="viewport" content="width=device-width, initial-scale=1">
               <meta http-equiv="X-UA-Compatible" content="IE=edge">
-              <meta name="description" content=" 3D Car Simulator drive rally cars, muscle cars, and police vehicles! Explore different maps, race, and test your driving skills in this thrilling 3D game.">
+              <meta name="description" content=" 3D Car Simulator: drive rally cars, muscle cars, and police vehicles! Explore different maps, race, and test your driving skills in this thrilling 3D game.">
               <meta name="keywords" content=" 3d car simulator online, 3d car simulator poki, 3d car simulator unblocked, 3d driving simulator google, 3d driving class, car simulator free, car simulator game, driving simulator online, car simulator pc">
               <meta name="author" content="FAF Games Team">
-		<meta name="publisher" content="FAF Games Team">
+		      <meta name="publisher" content="FAF Games Team">
               <link rel="canonical" href="/game/3d-car-simulator.html" />
               <!-- Title -->
-              <title>3D Car Simulator: Play Now for Free on FAF Games</title>
+              <title>3D Car Simulator - Play Online for Free | FAF Games</title>
               <!-- Favicon -->
               <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
                      <!--Bootstrap css-->
