--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -412,6 +412,44 @@
               <section class="fag-games-area related_games section_100">
                  <div class="container">
                     <div class="row">
+
+             <div class="container">
+<div class="section">
+  <h2>About</h2>
+  <p><strong>3D Car Simulator</strong> is a realistic driving game where you can explore open roads, perform stunts, and test different vehicles in a 3D environment. This <strong>3D Car Simulator unblocked game</strong> lets you switch between sports cars, classic vehicles, and police cars while roaming through city streets, off-road trails, and desert highways. With smooth controls, dynamic camera angles, and realistic physics, it’s perfect for fans of <strong>free online driving games</strong> who want to practice skills or just enjoy high-speed fun without restrictions.</p>
+  <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work or home, just click, relax, and enjoy no restrictions on what you can play.</p>
+</div>
+
+<div class="section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>WASD / Arrow Keys:</strong> Drive</li>
+    <li><strong>Spacebar:</strong> Handbrake</li>
+    <li><strong>C:</strong> Change Camera View</li>
+    <li><strong>Shift:</strong> Boost (if available)</li>
+    <li><strong>R:</strong> Reset Car</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Game Information</h2>
+  <ul>
+    <li><strong>Developer:</strong> Faramel Games</li>
+    <li><strong>Genre:</strong> Driving Simulation</li>
+    <li><strong>Players:</strong> 500K+ (Active)</li>
+    <li><strong>Release Date:</strong> 2017</li>
+    <li><strong>Build:</strong> HTML5, WebGL</li>
+  </ul>
+</div>
+
+<div class="tags">
+  <a href="https://faf-games.github.io/car/index.html" class="tag">Car</a>
+  <a href="https://faf-games.github.io/3d/index.html" class="tag">.io games</a>
+  <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
+  <a href="https://faf-games.github.io/action/index.html" class="tag">Action</a>
+</div>
+</div>
+						
                        <div class="col-12">
                           <div class="site-heading">
                              <h2 class="heading_animation">Related <span>games</span></h2>
