--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -414,13 +414,13 @@
                     <div class="row">
 
              <div class="container">
-<div class=".dark-theme .section">
+<div class="dark-theme section">
   <h2>About</h2>
   <p><strong>3D Car Simulator</strong> is a realistic driving game where you can explore open roads, perform stunts, and test different vehicles in a 3D environment. This <strong>3D Car Simulator unblocked game</strong> lets you switch between sports cars, classic vehicles, and police cars while roaming through city streets, off-road trails, and desert highways. With smooth controls, dynamic camera angles, and realistic physics, it’s perfect for fans of <strong>free online driving games</strong> who want to practice skills or just enjoy high-speed fun without restrictions.</p>
   <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work or home, just click, relax, and enjoy no restrictions on what you can play.</p>
 </div>
 
-<div class=".dark-theme .section">
+<div class="dark-theme section">
   <h2>Controls</h2>
   <ul>
     <li><strong>WASD / Arrow Keys:</strong> Drive</li>
@@ -431,7 +431,7 @@
   </ul>
 </div>
 
-<div class=".dark-theme .section">
+<div class="dark-theme section">
   <h2>Game Information</h2>
   <ul>
     <li><strong>Developer:</strong> Faramel Games</li>
