--- a/game/3d-bowling.html
+++ b/game/3d-bowling.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>3D Bowling: Play Online for Free | FAF Games</title>
+        <title>3D Bowling - Play Online for Free | FAF Games</title>
         <meta name="description" content="3D Bowling is a realistic bowling game with smooth graphics and easy controls. Play online free, aim for strikes, and enjoy a fun bowling experience anywhere.">
         <meta name="keywords" content="3d game, 3d bowling, 3d bowling Game, ">
         <meta name="news_keywords" content="bowling 3d model, 3d bowling alley, 3d Bowling Free, lagged 3d bowling, bowling g 3d, bowling rules, how to play bowling ">
@@ -411,13 +411,13 @@
              <div class="container">
                 <div class="row">
              <div class="container">
-				 <div class="section">
+				 <div class="dark-theme section">
   <h2>About</h2>
   <p><strong>3D Bowling</strong> is a realistic free online bowling game where you aim, roll, and strike your way to the highest score. This <strong>3D Bowling unblocked game</strong> features lifelike graphics, smooth ball physics, and easy-to-learn controls, making it fun for all ages. Play <strong>3D Bowling online for free</strong> at school, work, or home, and challenge yourself to master strikes, spares, and perfect games without any downloads.</p>
   <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work or home just click, relax and enjoy no restrictions on what you can play.</p>
 </div>
 
-<div class="section">
+<div class="dark-theme section">
   <h2>Controls</h2>
   <ul>
     <li><strong>Mouse Drag:</strong> Aim and adjust throw direction</li>
@@ -426,7 +426,7 @@
   </ul>
 </div>
 
-<div class="section">
+<div class="dark-theme section">
   <h2>Game Information</h2>
   <ul>
     <li><strong>Developer:</strong> Italic Games</li>
@@ -437,7 +437,7 @@
   </ul>
 </div>
 
-<div class="tags">
+<div class="dark-theme tags">
   <a href="https://faf-games.github.io/sport/index.html" class="tag">Sport</a>
   <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
 </div>
