--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -416,8 +416,17 @@
              <div class="container">
 <div class="dark-theme section">
   <h2>About</h2>
-  <p><strong>3D Car Simulator</strong> is a realistic driving game where you can explore open roads, perform stunts, and test different vehicles in a 3D environment. This <strong>3D Car Simulator unblocked game</strong> lets you switch between sports cars, classic vehicles, and police cars while roaming through city streets, off-road trails, and desert highways. With smooth controls, dynamic camera angles, and realistic physics, it’s perfect for fans of <strong>free online driving games</strong> who want to practice skills or just enjoy high-speed fun without restrictions.</p>
-  <p>Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work or home, just click, relax, and enjoy no restrictions on what you can play.</p>
+  <p><strong>3D Car Simulator</strong> is a realistic free online driving game where you can explore open roads, perform stunts, and test different vehicles in a 3D environment. This <strong>3D Car Simulator unblocked</strong> version lets you switch between sports cars, classic vehicles, and police cars while roaming city streets, off-road trails, and desert highways. With smooth driving controls, realistic physics, and dynamic camera angles, it’s perfect for fans of <strong>unblocked car driving games</strong> who want endless fun without downloads or restrictions.</p>
+</div>
+
+<div class="dark-theme section">
+  <h2>How to Play / Tips</h2>
+  <ul>
+    <li>Choose your car type before starting to explore different terrains.</li>
+    <li>Use the boost (Shift) to reach high speeds on straight roads.</li>
+    <li>Switch camera views for better control during stunts.</li>
+    <li>Practice braking before sharp turns to avoid losing control.</li>
+  </ul>
 </div>
 
 <div class="dark-theme section">
@@ -442,9 +451,37 @@
   </ul>
 </div>
 
-<div class="tags">
+<div class="dark-theme section">
+  <h2>System Requirements / Compatibility</h2>
+  <ul>
+    <li>Works on Chrome, Edge, and Firefox browsers.</li>
+    <li>Optimized for PC, Chromebook, and laptops.</li>
+    <li>Playable on mobile devices with touch controls (some features may vary).</li>
+  </ul>
+</div>
+
+<div class="dark-theme section">
+  <h2>Game Objective</h2>
+  <p>Explore the map, perform stunts, and test different vehicles without limits. The goal is to master driving skills while enjoying high-speed free roam gameplay.</p>
+</div>
+
+<div class="dark-theme section">
+  <h2>Unblocked Game Disclaimer</h2>
+  <p>This is an HTML5/WebGL unblocked version of 3D Car Simulator, meaning you can play it at school, work, or home without VPNs or downloads.</p>
+</div>
+
+<div class="dark-theme section">
+  <h2>Related Games</h2>
+  <ul>
+    <li><a href="https://faf-games.github.io/car/index.html">Madalin Stunt Cars 2</a></li>
+    <li><a href="https://faf-games.github.io/car/index.html">Drift Hunters</a></li>
+    <li><a href="https://faf-games.github.io/io-games/index.html">Crazy Drift .io</a></li>
+  </ul>
+</div>
+
+<div class="dark-theme tags">
   <a href="https://faf-games.github.io/car/index.html" class="tag">Car</a>
-  <a href="https://faf-games.github.io/3d/index.html" class="tag">.io games</a>
+  <a href="https://faf-games.github.io/io-games/index.html" class="tag">.io games</a>
   <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
   <a href="https://faf-games.github.io/action/index.html" class="tag">Action</a>
 </div>
