--- a/game/3d-bowling.html
+++ b/game/3d-bowling.html
@@ -437,7 +437,7 @@
   </ul>
 </div>
 
-<div class="dark-theme tags">
+<div class="tags">
   <a href="https://faf-games.github.io/sport/index.html" class="tag">Sport</a>
   <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
 </div>
