--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -473,9 +473,8 @@
 <div class="dark-theme section">
   <h2>Related Games</h2>
   <ul>
-    <li><a href="https://faf-games.github.io/car/index.html">Madalin Stunt Cars 2</a></li>
-    <li><a href="https://faf-games.github.io/car/index.html">Drift Hunters</a></li>
-    <li><a href="https://faf-games.github.io/io-games/index.html">Crazy Drift .io</a></li>
+    <li><a href="https://faf-games.github.io/game/madalin-stunt-cars-2.html">Madalin Stunt Cars 2</a></li>
+    <li><a href="https://faf-games.github.io/game/drift-hunters.html">Drift Hunters</a></li>
   </ul>
 </div>
 
