--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -413,7 +413,7 @@
                  <div class="container">
                     <div class="row">
 
-             <div class="container">
+             <div class="dark-theme container">
 <div class="dark-theme section">
   <h2>About</h2>
   <p><strong>3D Car Simulator</strong> is a realistic free online driving game where you can explore open roads, perform stunts, and test different vehicles in a 3D environment. This <strong>3D Car Simulator unblocked</strong> version lets you switch between sports cars, classic vehicles, and police cars while roaming city streets, off-road trails, and desert highways. With smooth driving controls, realistic physics, and dynamic camera angles, it’s perfect for fans of <strong>unblocked car driving games</strong> who want endless fun without downloads or restrictions.</p>
