--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -416,7 +416,7 @@
              <div class="dark-theme container">
 <div class="dark-theme section">
   <h2>About</h2>
-  <p><strong>3D Car Simulator</strong> is a realistic free online driving game where you can explore open roads, perform stunts, and test different vehicles in a 3D environment. This <strong>3D Car Simulator unblocked</strong> version lets you switch between sports cars, classic vehicles, and police cars while roaming city streets, off-road trails, and desert highways. With smooth driving controls, realistic physics, and dynamic camera angles, it’s perfect for fans of <strong>unblocked car driving games</strong> who want endless fun without downloads or restrictions.</p>
+  <p><strong>3D Car Simulator</strong> is a realistic free online driving game where you can explore open roads, perform stunts, and test different vehicles in a 3D environment. This <strong>3D Car Simulator unblocked</strong> version lets you switch between sports cars, classic vehicles, and police cars while roaming city streets, off-road trails, and desert highways. With smooth driving controls, realistic physics, and dynamic camera angles, it’s perfect for fans of <a href="https://faf-games.github.io" target="_blank">unblocked games</a> who want endless fun without downloads or restrictions.</p>
 </div>
 
 <div class="dark-theme section">
@@ -478,7 +478,7 @@
   </ul>
 </div>
 
-<div class="dark-theme tags">
+<div class="tags">
   <a href="https://faf-games.github.io/car/index.html" class="tag">Car</a>
   <a href="https://faf-games.github.io/io-games/index.html" class="tag">.io games</a>
   <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
