--- a/game/3d-moto-simulator-2.html
+++ b/game/3d-moto-simulator-2.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>3D Moto Simulator 2: Play Now for Free on FAF Games</title>
+        <title>3D Moto Simulator 2 - Play Online for Free | FAF Games</title>
         <meta name="description" content="3D Moto Simulator 2 race through exciting locations! Perform stunts, ride fast bikes, and enjoy total freedom in this thrilling motorbike racing game.">        
         <meta name="news_keywords" content="3d moto simulator 2, 3d moto simulator 2 download, 3d moto simulator crazy games, 3d moto simulator 2 poki, 3d moto simulator unblocked, 3d moto simulator 2 unblocked, 3d moto game , moto simulator online">
         <meta name="author" content="FAF Games Team">
@@ -408,6 +408,80 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+
+					             <div class="dark-theme container">
+									 <div class="dark-theme section">
+  <h2>About</h2>
+  <p><strong>3D Moto Simulator 2</strong> is an exciting free online motorcycle riding game where you can experience high-speed action across open city streets, off-road trails, and stunt ramps. This <strong>3D Moto Simulator 2 unblocked</strong> version allows you to switch between different motorbikes, from dirt bikes to superbikes, and explore massive maps without limits. Featuring realistic physics, smooth controls, and open-world gameplay, it’s a must-play for fans of <a href="https://faf-games.github.io" target="_blank">unblocked games</a> who love fast-paced motorcycle adventures without downloads or restrictions.</p>
+</div>
+
+<div class="dark-theme section">
+  <h2>How to Play / Tips</h2>
+  <ul>
+    <li>Choose your favorite bike type for speed or off-road handling.</li>
+    <li>Use ramps and jumps to perform freestyle stunts.</li>
+    <li>Switch between different camera views for a better riding experience.</li>
+    <li>Practice sharp turns and braking to improve control at high speeds.</li>
+  </ul>
+</div>
+
+<div class="dark-theme section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>WASD / Arrow Keys:</strong> Ride</li>
+    <li><strong>Shift:</strong> Boost</li>
+    <li><strong>Spacebar:</strong> Brake</li>
+    <li><strong>C:</strong> Change Camera</li>
+    <li><strong>R:</strong> Reset Bike</li>
+  </ul>
+</div>
+
+<div class="dark-theme section">
+  <h2>Game Information</h2>
+  <ul>
+    <li><strong>Developer:</strong> Faramel Games</li>
+    <li><strong>Genre:</strong> Motorcycle Simulation</li>
+    <li><strong>Players:</strong> 400K+ (Active)</li>
+    <li><strong>Release Date:</strong> 2017</li>
+    <li><strong>Build:</strong> HTML5, WebGL</li>
+  </ul>
+</div>
+
+<div class="dark-theme section">
+  <h2>System Requirements / Compatibility</h2>
+  <ul>
+    <li>Works on Chrome, Edge, and Firefox browsers.</li>
+    <li>Optimized for PC, Chromebook, and laptops.</li>
+    <li>Playable on mobile devices with touch controls (some features may vary).</li>
+  </ul>
+</div>
+
+<div class="dark-theme section">
+  <h2>Game Objective</h2>
+  <p>Ride through different maps, test all bike types, and perform daring stunts while mastering motorcycle control in an open-world environment.</p>
+</div>
+
+<div class="dark-theme section">
+  <h2>Unblocked Game Disclaimer</h2>
+  <p>This is an HTML5/WebGL unblocked version of 3D Moto Simulator 2, so you can play it at school, work, or home without VPNs or downloads.</p>
+</div>
+
+<div class="dark-theme section">
+  <h2>Related Games</h2>
+  <ul>
+    <li><a href="https://faf-games.github.io/game/3d-car-simulator.html">3D Car Simulator</a></li>
+    <li><a href="https://faf-games.github.io/game/madalin-stunt-cars-2.html">Madalin Stunt Cars 2</a></li>
+  </ul>
+</div>
+
+<div class="dark-theme tags">
+  <a href="https://faf-games.github.io/bike/index.html" class="tag">Bike</a>
+  <a href="https://faf-games.github.io/action/index.html" class="tag">Action</a>
+  <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
+  <a href="https://faf-games.github.io/io-games/index.html" class="tag">.io games</a>
+</div>
+</div>
+
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
