--- a/game/8ball-pool.html
+++ b/game/8ball-pool.html
@@ -5,8 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>8 Ball Pool: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>8 Ball Pool - Play Online for Free | FAF Games</title>
+        <meta name="description" content="8 Ball Pool is a classic online billiards game where you challenge friends or players worldwide. Play free in your browser, aim carefully, and sink every shot to win.">
+
             
         <meta name="title" content="8 Ball Pool">
         <meta name="keywords" content="sport games online, sport games free download, sport games for kids, sports games free, 8 ball pool online, 8 ball pool pc, 8 ball pool download, 8 ball pool miniclip, 8 ball pool online free, 8 ball pool facebook, 8 ball pool unblocked, 8 ball pool online with friends">
@@ -403,6 +404,71 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+
+					<div class="dark-theme container">
+
+  <div class="dark-theme section">
+    <h2>About</h2>
+    <p><strong>8 Ball Pool</strong> is a realistic and competitive online billiards game where you can challenge players from around the world or practice solo to master your skills. In this <strong>8 Ball Pool unblocked</strong> version, you can enjoy smooth physics, precise aiming, and strategic gameplay without any restrictions. Whether you’re competing in friendly matches or intense tournaments, this game is perfect for fans of classic cue sports who want to play directly in their browser. Play now and experience one of the most popular <a href="https://faf-games.github.io" target="_blank">unblocked games</a> in the world of online pool.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>How to Play / Tips</h2>
+    <ul>
+      <li>Aim carefully by dragging your cue and adjusting power before each shot.</li>
+      <li>Follow standard 8-ball rules: pocket your group of balls (solids or stripes) and finish by sinking the 8-ball.</li>
+      <li>Use spin control to position the cue ball for your next shot.</li>
+      <li>Practice in single-player mode to improve your accuracy and strategy.</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Controls</h2>
+    <ul>
+      <li><strong>Mouse:</strong> Aim / Adjust Power / Shoot</li>
+      <li><strong>Hold & Drag Mouse:</strong> Control shot strength</li>
+      <li><strong>Spacebar:</strong> Shoot (alternative)</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Information</h2>
+    <ul>
+      <li><strong>Developer:</strong> Miniclip</li>
+      <li><strong>Genre:</strong> Sports Simulation (Pool / Billiards)</li>
+      <li><strong>Players:</strong> Millions Worldwide</li>
+      <li><strong>Release Date:</strong> 2010 (Original) | Unblocked Version: 2022</li>
+      <li><strong>Build:</strong> HTML5</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Objective</h2>
+    <p>Pocket all your assigned balls (solids or stripes) and then legally sink the 8-ball to win the match against your opponent.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Unblocked Game Disclaimer</h2>
+    <p>This is an unblocked HTML5 version of 8 Ball Pool, allowing you to play freely at school, work, or home without downloads or VPNs.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Related Games</h2>
+    <ul>
+      <li><a href="https://faf-games.github.io/game/9-ball-pool.html">9 Ball Pool</a></li>
+      <li><a href="https://faf-games.github.io/game/mini-pool.html">Mini Pool</a></li>
+      <li><a href="https://faf-games.github.io/game/billiards-city.html">Billiards City</a></li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section tags">
+    <a href="https://faf-games.github.io/sport/index.html" class="tag">Sport</a>
+    <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
+    <a href="https://faf-games.github.io/2-player-games/index.html" class="tag">2 Player Games</a>
+  </div>
+
+</div>
+
 
 
                    <div class="col-12">
