--- a/game/3d-bowling.html
+++ b/game/3d-bowling.html
@@ -13,6 +13,8 @@
         <meta name="author" content="FAF Games Team">
 	    <meta name="publisher" content="FAF Games Team">
         <link rel="canonical" href="/game/3d-bowling.html" />
+		<meta property="og:image" content="faf-games.github.io/assets/img/3dbowling/logo.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
