--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -11,6 +11,8 @@
               <meta name="author" content="FAF Games Team">
 		      <meta name="publisher" content="FAF Games Team">
               <link rel="canonical" href="/game/3d-car-simulator.html" />
+        	  <meta property="og:image" content="faf-games.github.io/assets/img/3dcarsimulator/3d-car-simulator.webp">
+
               <!-- Title -->
               <title>3D Car Simulator - Play Online for Free | FAF Games</title>
               <!-- Favicon -->
