--- a/game/3d-moto-simulator-2.html
+++ b/game/3d-moto-simulator-2.html
@@ -11,6 +11,8 @@
         <meta name="author" content="FAF Games Team">
 	    <meta name="publisher" content="FAF Games Team">
         <link rel="canonical" href="/game/3d-moto-simulator-2.html" />
+		<meta property="og:image" content="faf-games.github.io/assets/img/3dmotosimulator2/3d-moto-simulator-2.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
