--- a/game/8ball-pool.html
+++ b/game/8ball-pool.html
@@ -14,6 +14,8 @@
         <meta name="author" content="FAF Games Team">
 	    <meta name="publisher" content="FAF Games Team">
         <link rel="canonical" href="/game/8ball-pool.html" />
+		<meta property="og:image" content="faf-games.github.io/assets/img/8ballpool/8-ball-pool.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
