--- a/game/adventure-drivers.html
+++ b/game/adventure-drivers.html
@@ -6,16 +6,18 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Adventure Drivers: Play Now for Free on FAF Games</title>
-      <meta name="description" content="
-	      
+      <title>Adventure Drivers - Play Online for Free | FAF Games</title>
+	  <meta name="description" content=" Adventure Drivers is an exciting racing game where you compete in wild tracks, collect coins, and perform stunts. Play free online and race to victory anywhere.">
+
       <meta name="keywords" content=" adventure drivers poki, adventure drivers download, adventure drivers y8, adventure drivers lagged, adventure drivers online, adventure drivers 2, adventure drivers crazy games, adventure drivers unblocked">
       <meta name="author" content="FAF Games Team">
-	<meta name="publisher" content="FAF Games Team">
-     <link rel="canonical" href="/game/adventure-drivers.html" />
+	  <meta name="publisher" content="FAF Games Team">
+      <link rel="canonical" href="/game/adventure-drivers.html" />
+	  <meta property="og:image" content="faf-games.github.io/assets/img/adventuredrivers/adventure-drivers.webp">
+
       <!-- Favicon -->
-      <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
-             <!--Bootstrap css-->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
+    <!--Bootstrap css-->
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!--Font Awesome css-->
     <link rel="stylesheet" href="../assets/css/all.min.css">
@@ -404,6 +406,69 @@
       <section class="fag-games-area related_games section_100">
          <div class="container">
             <div class="row">
+				<div class="dark-theme container">
+
+  <div class="dark-theme section">
+    <h2>About</h2>
+    <p><strong>Adventure Drivers</strong> is a fast-paced racing and stunt game where you compete against skilled opponents across exotic locations filled with jumps, obstacles, and treasures. In this <strong>Adventure Drivers unblocked</strong> version, you can enjoy thrilling car races directly in your browser without restrictions. Collect coins, upgrade your vehicle, and master daring stunts to outpace your rivals. Perfect for fans of action-packed racing challenges, this game combines speed, strategy, and skill. Play now and experience one of the most exciting <a href="https://faf-games.github.io" target="_blank">unblocked games</a> available online.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>How to Play / Tips</h2>
+    <ul>
+      <li>Use acceleration and brakes wisely to navigate tricky tracks and ramps.</li>
+      <li>Collect coins during races to unlock faster cars and better upgrades.</li>
+      <li>Perform flips and stunts to gain extra points and speed boosts.</li>
+      <li>Keep an eye out for shortcuts to get ahead of the competition.</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Controls</h2>
+    <ul>
+      <li><strong>Arrow Keys:</strong> Drive / Balance in air</li>
+      <li><strong>Spacebar:</strong> Use nitro boost</li>
+      <li><strong>Shift:</strong> Perform stunts</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Information</h2>
+    <ul>
+      <li><strong>Developer:</strong> MarketJS</li>
+      <li><strong>Genre:</strong> Racing / Stunt</li>
+      <li><strong>Players:</strong> 1M+ Worldwide</li>
+      <li><strong>Release Date:</strong> 2019</li>
+      <li><strong>Build:</strong> HTML5</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Objective</h2>
+    <p>Race to the finish line, collect treasures, and perform jaw-dropping stunts while upgrading your car to stay ahead of your rivals.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Unblocked Game Disclaimer</h2>
+    <p>This is an unblocked HTML5 version of Adventure Drivers, allowing you to enjoy the game anywhere—school, work, or home—without downloads or restrictions.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Related Games</h2>
+    <ul>
+      <li><a href="https://faf-games.github.io/game/madalin-stunt-cars-2.html">Madalin Stunt Cars 2</a></li>
+      <li><a href="https://faf-games.github.io/game/3d-car-simulator.html">3D Car Simulator</a></li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section tags">
+    <a href="https://faf-games.github.io/car/index.html" class="tag">Car</a>
+    <a href="https://faf-games.github.io/action/index.html" class="tag">Action</a>
+    <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
+  </div>
+
+</div>
+
                <div class="col-12">
                   <div class="site-heading">
                      <h2 class="heading_animation">Related <span>games</span></h2>
