--- a/game/among-us.html
+++ b/game/among-us.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Among us Unblocked: Play Now for Free on FAF Games</title>
+        <title>Among us Unblocked - Play Online for Free | FAF Games</title>
         <meta name="description" content="Play Among Us online! Join crewmates to complete tasks or deceive them as the Impostor. Experience teamwork, strategy, and betrayal in this thrilling multiplayer game.">
         <meta name="keywords" content="Among Us Game, 
         Action Games, Action Games, Action Games Pc, Among Us Unblocked Action Games Pc, 
@@ -22,8 +22,10 @@
         among us pc">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/among-us.html" />
-	<meta name="robots" content="index, follow">
-	<meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+		<meta property="og:image" content="faf-games.github.io/assets/img/amongus/among-us.01.png">
+
 	    
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -439,6 +441,64 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+					<div class="dark-theme container">
+
+  <div class="dark-theme section">
+    <h2>About</h2>
+    <p><strong>Among Us</strong> is a multiplayer social deduction game where players work together to complete spaceship tasks while trying to identify the hidden Impostors. In this <strong>Among Us unblocked</strong> version, you can enjoy the game directly in your browser without downloads or restrictions. Work as a Crewmate to complete objectives, or play as an Impostor and sabotage the mission without getting caught. This version is perfect for fans of teamwork, deception, and high-stakes mind games. Play one of the most popular <a href="https://faf-games.github.io" target="_blank">unblocked games</a> and test your skills in strategy and observation.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>How to Play / Tips</h2>
+    <ul>
+      <li>As a Crewmate, focus on completing tasks quickly while keeping an eye on suspicious players.</li>
+      <li>As an Impostor, blend in with the crew, sabotage systems, and eliminate players strategically.</li>
+      <li>Use meetings to discuss and vote, but be careful not to draw unwanted attention.</li>
+      <li>Pay attention to player movement patterns to spot unusual behavior.</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Controls</h2>
+    <ul>
+      <li><strong>WASD / Arrow Keys:</strong> Move</li>
+      <li><strong>Mouse:</strong> Interact with objects and use menus</li>
+      <li><strong>E:</strong> Use / Report</li>
+      <li><strong>R:</strong> Report body</li>
+      <li><strong>Q:</strong> Kill (Impostor only)</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Information</h2>
+    <ul>
+      <li><strong>Developer:</strong> Innersloth</li>
+      <li><strong>Genre:</strong> Social Deduction / Multiplayer</li>
+      <li><strong>Players:</strong> 4-15 Players Online</li>
+      <li><strong>Release Date:</strong> 2018 | Browser Version: 2021</li>
+      <li><strong>Build:</strong> HTML5 / WebGL</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Objective</h2>
+    <p>Work as a team to complete all tasks or find the Impostors before they eliminate the crew. As an Impostor, deceive and sabotage to win without being caught.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Unblocked Game Disclaimer</h2>
+    <p>This is an unblocked HTML5 version of Among Us, allowing you to play anywhere, at school, work, or at home, without downloads or restrictions.</p>
+  </div>
+
+
+  <div class="dark-theme section tags">
+    <a href="https://faf-games.github.io/action/index.html" class="tag">Action</a>
+    <a href="https://faf-games.github.io/2-player-games/index.html" class="tag">2 Player Games</a>
+    <a href="https://faf-games.github.io/io-games/index.html" class="tag">.io Games</a>
+  </div>
+
+</div>
+
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
