--- a/game/angry-gran-run.html
+++ b/game/angry-gran-run.html
@@ -4,9 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Angry Gran Run Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
-        
+        <title>Angry Gran Run Unblocked - Play Online for Free | FAF Games</title>
+        <meta name="description" content=" Angry Gran Run is a fun endless running game where you help Granny dash through the streets, dodge obstacles, and collect coins. Play free online anytime, anywhere.">
+
         <meta name="title" content="Angry Gran Run">
         <meta name="keywords" content="Angry Gran Run Game, Running Game, Runninggame, Running Games, RunningGames
         running game online
@@ -15,15 +15,17 @@
         free running game 
         running game meaning">
         <meta name="news_keywords" content="angry gran run online
-        angry gran run poki
-        angry gran run download
-        angry gran run 2
-        angry gran run crazy games
-        angry gran run unblocked">
+        Angry Gran Run Poki
+        Angry Gran Run download
+        Angry Gran Run 2
+        Angry Gran run crazy games
+        Angry Gran Run Unblocked">
         <meta name="author" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
-	<meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
+    	<meta name="publisher" content="FAF Games Team">
         <link rel="canonical" href="/game/angry-gran-run.html" />
+		<meta property="og:image" content="faf-games.github.io/assets/img/angrygranrun/logo.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -418,6 +420,69 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+
+					<div class="dark-theme container">
+
+  <div class="dark-theme section">
+    <h2>About</h2>
+    <p><strong>Angry Gran Run</strong> is a fun and fast-paced endless running game where you help the hilarious and unstoppable Angry Gran escape the asylum and dash through the streets. In this <strong>Angry Gran Run unblocked</strong> version, you can play directly in your browser without downloads or restrictions. Jump over obstacles, slide under barriers, and smash objects to earn coins and upgrade your crazy outfits. Perfect for fans of action-packed arcade games and running challenges, this title will keep you hooked. Play one of the funniest <a href="https://faf-games.github.io" target="_blank">unblocked games</a> and test your reflexes in this endless runner adventure.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>How to Play / Tips</h2>
+    <ul>
+      <li>Use quick reflexes to dodge obstacles and collect as many coins as possible.</li>
+      <li>Smash objects in your way to gain extra points and bonuses.</li>
+      <li>Use coins to unlock new costumes and characters for Angry Gran.</li>
+      <li>Look out for special power-ups to help you run farther and score higher.</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Controls</h2>
+    <ul>
+      <li><strong>Arrow Keys / WASD:</strong> Move left, right, jump, or slide</li>
+      <li><strong>Spacebar:</strong> Smash obstacles</li>
+      <li><strong>Mouse:</strong> Navigate menus</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Information</h2>
+    <ul>
+      <li><strong>Developer:</strong> Ace Viral</li>
+      <li><strong>Genre:</strong> Endless Runner / Arcade</li>
+      <li><strong>Players:</strong> Single Player</li>
+      <li><strong>Release Date:</strong> Original: 2012 | Browser Version: 2020</li>
+      <li><strong>Build:</strong> HTML5 / WebGL</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Objective</h2>
+    <p>Guide Angry Gran as far as possible through the streets while avoiding obstacles, smashing objects, and collecting coins to achieve the highest score.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Unblocked Game Disclaimer</h2>
+    <p>This is an unblocked HTML5 version of Angry Gran Run, playable at school, work, or home without downloads or restrictions.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Related Games</h2>
+    <ul>
+      <li><a href="https://faf-games.github.io/game/subway-surfers.html">Subway Surfers</a></li>
+      <li><a href="https://faf-games.github.io/game/temple-run-2.html">Temple Run 2</a></li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section tags">
+    <a href="https://faf-games.github.io/action/index.html" class="tag">Action</a>
+    <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
+  </div>
+
+</div>
+
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
